--- a/Source/ESM-CoraTheBookHunter-Extracted/Keywords/LegendaryBook.yaml
+++ b/Source/ESM-CoraTheBookHunter-Extracted/Keywords/LegendaryBook.yaml
@@ -1,5 +1,5 @@
 FormKey: 000808:CoraTheBookHunter.esm
-EditorID: LegendaryBookForCora
+EditorID: LegendaryBook
 Color: '#000000FF'
 Notes: 'A Legendary Book to turn in to Cora for a special reward. '
 Type: None
