--- a/Source/ESM-CoraTheBookHunter-Extracted/LeveledItems/LL_LegendaryItem_BookList.yaml
+++ b/Source/ESM-CoraTheBookHunter-Extracted/LeveledItems/LL_LegendaryItem_BookList.yaml
@@ -7,7 +7,7 @@ Flags:
 - CalculateForEachItemInCount
 Entries:
 - Level: 1
-  Reference: 00081D:BooksRevamped.esm
+  Reference: 000869:CoraTheBookHunter.esm
   Count: 1
 - Level: 25
   Reference: 000845:CoraTheBookHunter.esm
