--- a/Source/ESM-CoraTheBookHunter-Extracted/Books/LB_TheReflectingPool.yaml
+++ b/Source/ESM-CoraTheBookHunter-Extracted/Books/LB_TheReflectingPool.yaml
@@ -5,26 +5,26 @@ VirtualMachineAdapter:
   - Name: Book_ApplySpellOnReadScript
     Properties:
     - MutagenObjectType: ScriptObjectProperty
-      Name: AttchedToBook
-      Object: 000837:CoraTheBookHunter.esm
-    - MutagenObjectType: ScriptObjectProperty
       Name: PlayerRef
       Object: 000014:Starfield.esm
     - MutagenObjectType: ScriptObjectProperty
       Name: SpellToApplyOnFailure
       Object: 1DC467:Starfield.esm
     - MutagenObjectType: ScriptObjectProperty
-      Name: SpellToApply_LargeDuration
-      Object: 00084A:CoraTheBookHunter.esm
-    - MutagenObjectType: ScriptObjectProperty
-      Name: SpellToApply_MediumDuration
-      Object: 000849:CoraTheBookHunter.esm
-    - MutagenObjectType: ScriptObjectProperty
-      Name: SpellToApply_SmallDuration
-      Object: 000848:CoraTheBookHunter.esm
-    - MutagenObjectType: ScriptObjectProperty
       Name: Venpi_DebugEnabled
       Object: 000800:VenpiCore.esm
+    - MutagenObjectType: ScriptObjectProperty
+      Name: FL_AvailableSpells
+      Object: 000885:CoraTheBookHunter.esm
+    - MutagenObjectType: ScriptObjectProperty
+      Name: BookReadCount
+      Object: 000881:CoraTheBookHunter.esm
+    - MutagenObjectType: ScriptObjectProperty
+      Name: CoraAgreedToGivePotionRecipies
+      Object: 00088C:CoraTheBookHunter.esm
+    - MutagenObjectType: ScriptObjectProperty
+      Name: CoraPotionsAvailable
+      Object: 00088D:CoraTheBookHunter.esm
 ObjectBounds:
   First: -0.008951, -0.064775, -4.1E-05
   Second: 0.008596, 0.056135, 0.172444
